@@ -1,3 +1,9 @@
+2009-01-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Magick++/Drawable.h: Apparently the only STL container which
+	may be DLL-exported is <vector> but we are using <list> so disable
+	DLL-export of list-based template objects.
+
 2008-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Color.cpp: Added an _isValid boolean to represent an invalid
